--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/student 
-spring.datasource.username=postgres
-spring.datasource.password=glra3reis.
+spring.datasource.username=user
+spring.datasource.password=senha
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
